fixed issue with  content appearing behind header and footer

--- a/style.css
+++ b/style.css
@@ -72,13 +72,22 @@ p {
 
 /* -----------------------------------------Home Page Content*/
 
+body {
+    padding-top: 100px;
+    padding-bottom: 150px
+}
+
+.header-padding {
+    padding-top: 100px;
+}
+
 
 .main-content {
     position: absolute;
     top: 75px;
     bottom: 150px
 }
-/* pushes content below navbar */
+/* pushes content below navbar NOT? USING AS OF 27/02*/
 
 .title-section h1 {
     font-family: 'Nothing You Could Do', cursive;
@@ -117,7 +126,7 @@ p {
 }
 
 .reasons-section {
-    
+
 }
 
 
@@ -133,7 +142,9 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 50px
+    height: 50px;
+    padding-top: 100px;
+    padding-bottom: 150px;
 }
 
 /* -----------------------------------------about page*/
@@ -187,4 +198,8 @@ p {
 .justify-content-center {
     padding: 0;
 }
+
+/* .footer-padding {
+    padding-bottom: 100px;
+} */
 
